# MLFlow_docker_compose_template

./: README.md  docker-compose.yml
feast/: Dockerfile  convert_csv_to_parquet.py  feature_store.yaml
feast/feature_repo/: example.py  feature_store.yaml
feast/feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
mlflow/: .tool-versions  Dockerfile  example.py  pyproject.toml
