[tool.poetry]
name = "mlflow_server_docker"
version = "1.0.0"
description = ""
authors = ["Fernando Freire <fernando.scattone@alumni.usp.br>"]

[tool.poetry.dependencies]
python = "3.10.4"
boto3 = ">=1.23"
mlflow = ">=1.27"
PyMySQL = ">=1.0.2"
cryptography = ">=37.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
