[tool.poetry]
name = "mlflow_server"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
boto3 = ">=1.24"
mlflow = ">=1.27"
PyMySQL = ">=1.0"
cryptography = ">=37.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
