[tool.poetry]
name = "mlflow_server"
version = "0.3.0"
description = ""
authors = ["Fernando  <fernando.scattone@alumni.usp.br>"]

[tool.poetry.dependencies]
python = "3.11.6"
boto3 = "*"
mlflow = "^2.8.1"
PyMySQL = "^1.1"
cryptography = "^40.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
